fix: layout issues
- error when non-authenticated user tries to like question/answer
- disabled answer post for non-authenticated users
- print css

--- a/src/public/styles/print.css
+++ b/src/public/styles/print.css
@@ -1,5 +1,8 @@
 @media print {
-    .footer, .header {
+    .footer, .header, .content__question-form, hr {
         visibility: hidden;
+    }
+    blockquote {
+        border: none;
     }
 }
